--- a/checkout.html
+++ b/checkout.html
@@ -16,22 +16,9 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="../images/Logo.png" />
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 3734880, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
-    <title>Squareeyes | Checkout</title>
+    <script type="module" src="/js/pages/checkout.js"></script>
+    <script type="module" src="/js/components/form_validation.js"></script>
+    <title>SquareEyes | Checkout</title>
   </head>
   <body>
     <div class="header-section">
@@ -39,13 +26,16 @@
         <header>
           <div class="logo">
             <a href="index.html">
-              <img src="images/Logo.png" class="logo" alt="Squareeyes Logo"
+              <img
+                src="images/Logo_light.png"
+                class="logo"
+                alt="SquareEyes Logo"
             /></a>
           </div>
           <label for="hamburger" class="hamburger-icon"
             ><img src="images/icon-hamburger.png" alt="Icon for Hamburger Menu"
           /></label>
-          <input type="checkbox" id="hamburger" />
+          <input type="checkbox" id="hamburger" aria-labelledby="hamburger" />
           <nav>
             <label for="search1" id="searchlabel1">Search</label>
             <input
@@ -53,13 +43,14 @@
               class="nav-hidden hidden-search"
               placeholder="     Search"
               id="search1"
+              aria-labelledby="searchlabel1"
             />
+            <a href="index.html" class="nav-hidden">Home</a>
             <div class="h-links">
-              <a href="index.html" class="active">Home</a>
               <a href="videos.html">Videos</a>
+              <a href="about.html">About</a>
+              <a href="contact.html">Contact</a>
             </div>
-            <a href="about.html" class="nav-hidden">About</a>
-            <a href="contact.html" class="nav-hidden">Contact</a>
             <a href="cart.html" class="nav-hidden">Cart</a>
           </nav>
           <label for="search2" id="searchlabel2">Search</label>
@@ -68,6 +59,7 @@
             class="search"
             placeholder="     Search"
             id="search2"
+            aria-labelledby="searchlabel2"
           />
           <div>
             <a
@@ -77,13 +69,15 @@
                 class="user-icon"
             /></a>
           </div>
-          <div class="cart-icon">
-            <a href="cart.html"
-              ><img
+          <div class="cart-icon" id="cartIcon">
+            <a href="cart.html">
+              <img
                 src="images/cart_icon.png"
                 alt="Cart Icon"
                 class="cart-icon"
-            /></a>
+              />
+              <span id="cartItemCount">0</span>
+            </a>
           </div>
         </header>
       </div>
@@ -99,75 +93,115 @@
         </div>
       </section>
 
-      <section id="checkout-info">
-        <div class="content-wrap">
-          <div class="checkout-container">
-            <div class="check1">
+      <section class="checkout-container">
+        <div class="personal-information">
+          <h2>Your Information</h2>
+          <div class="your-information">
+            <p>Ola Normann</p>
+            <p>Fictional Street 1</p>
+            <p>8907 Brønnøysund</p>
+            <p>NO Norway</p>
+          </div>
+        </div>
+
+        <div class="payment-content-wrap">
+          <div class="payment">
+            <h2>Select your desired form of payment</h2>
+            <div class="how-to-pay">
+              <div>
+                <input type="radio" name="payment-method" id="invoice" />
+                <label for="invoice">Invoice</label>
+              </div>
+              <div>
+                <input type="radio" name="payment-method" id="vipps" />
+                <label for="vipps">Vipps</label>
+              </div>
+              <div>
+                <input type="radio" name="payment-method" id="card-input" />
+                <label for="card-input">Card</label>
+                <img src="images/card-mastercard.png" alt="Mastercard Icon" />
+                <img src="images/card-visa.png" alt="Visa Icon" />
+                <img src="images/card-amex.png" alt="American Express Icon" />
+              </div>
+            </div>
+            <div class="payment-invoice">
+              <h3>Pay for your products after you receive them.</h3>
+              <p>We will send you an invoice together with your purchase.</p>
+              <div class="purchase-buttons">
+                <a href="checkout-success.html">
+                  <h2 id="purchaseButton1" class="cta purchase-button">
+                    Purchase
+                  </h2>
+                </a>
+              </div>
+            </div>
+            <div class="payment-vipps">
+              <h3>
+                Vipps does not charge any fees when you pay to companies. No
+                matter the amount!
+              </h3>
+              <div class="vipps-logo">
+                <img
+                  class="vipps-image"
+                  src="images/vipps-logo.png"
+                  alt="Vipps logo"
+                />
+              </div>
+              <div class="purchase-buttons">
+                <a href="checkout-success.html">
+                  <h2 id="purchaseButton2" class="cta purchase-button">
+                    Purchase
+                  </h2>
+                </a>
+              </div>
+            </div>
+            <div class="payment-card">
               <h3>Enter your card information</h3>
               <div class="card-form">
-                <form>
+                <form id="payment-form">
                   <label for="cardholders-name">Cardholder's name</label>
                   <input
                     type="text"
                     name="cardholders-name"
                     id="cardholders-name"
                   />
+                  <div class="form-error" id="cardholdersNameError">
+                    Please enter cardholders name
+                  </div>
                   <label for="card-number">Card number</label>
                   <input type="text" name="card-number" id="card-number" />
+                  <div class="form-error" id="cardNumberError">
+                    Please enter valid card number, 16 digits
+                  </div>
                   <div class="expiry-cvc">
                     <div class="expiry">
                       <label for="expiry-date">Expiry date</label>
-                      <input type="text" name="expiry-date" id="expiry-date" />
+                      <input
+                        type="date"
+                        name="expiry-date"
+                        id="expiry-date"
+                        min="2023-12-04"
+                      />
+                      <div class="form-error" id="expiryDateError">
+                        Please enter valid expiry date
+                      </div>
                     </div>
                     <div class="cvc">
                       <label for="cvc">CVC</label>
                       <input type="text" name="cvc" id="cvc" />
+                      <div class="form-error" id="cvcNumberError">
+                        Enter valid CVC, 3 digits
+                      </div>
                     </div>
                   </div>
-                  <div id="purchase-button">
+                  <div class="purchase-buttons">
                     <a href="checkout-success.html">
-                      <h2 class="cta purchase-button">Purchase</h2>
+                      <h2 id="purchaseButton3" class="cta purchase-button">
+                        Purchase
+                      </h2>
                     </a>
                   </div>
                 </form>
-              </div>
-            </div>
-
-            <div class="check2">
-              <h3>Your order</h3>
-              <div class="your-order">
-                <div class="checkout-product clearfix">
-                  <h5>Godzilla King of the monsters</h5>
-                  <img
-                    src="images/cover_godzilla.png"
-                    alt="Godzilla
-                  King of the monsters Cover"
-                  />
-                  <h3>$ 9.99</h3>
-                </div>
-                <div class="checkout-product clearfix">
-                  <h5>Toy Story 4</h5>
-                  <img
-                    src="images/cover_toystory4.png"
-                    alt="Toy Story 4 Cover"
-                  />
-                  <h3>$ 4.99</h3>
-                </div>
-                <div class="check3">
-                  <div>
-                    <h3>Details:</h3>
-                  </div>
-                  <div>
-                    <p>Order</p>
-                    <p>Shipping</p>
-                    <p>TOTAL</p>
-                  </div>
-                  <div>
-                    <p>$14,98</p>
-                    <p>$ 0,00</p>
-                    <p>$14,98</p>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
@@ -180,7 +214,7 @@
         <div class="footer-content">
           <div class="footer-logo">
             <a href="index.html"
-              ><img src="images/Logo.png" alt="Squareyes Logo"
+              ><img src="images/Logo_light.png" alt="SquareEyes Logo"
             /></a>
           </div>
           <div class="footer-links">
