--- a/products/movie.html
+++ b/products/movie.html
@@ -17,21 +17,6 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="icon" href="../images/Logo.png" />
     <script type="module" src="/js/pages/movie.js"></script>
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 3734880, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
     <title>Product | Movie</title>
   </head>
   <body>
@@ -40,7 +25,10 @@
         <header>
           <div class="logo">
             <a href="../index.html">
-              <img src="../images/Logo.png" class="logo" alt="Squareeyes Logo"
+              <img
+                src="../images/Logo_light.png"
+                class="logo"
+                alt="SquareEyes Logo"
             /></a>
           </div>
           <label for="hamburger" class="hamburger-icon"
@@ -48,7 +36,7 @@
               src="../images/icon-hamburger.png"
               alt="Icon for Hamburger Menu"
           /></label>
-          <input type="checkbox" id="hamburger" />
+          <input type="checkbox" id="hamburger" aria-labelledby="hamburger" />
           <nav>
             <label for="search1" id="searchlabel1">Search</label>
             <input
@@ -56,13 +44,14 @@
               class="nav-hidden hidden-search"
               placeholder="     Search"
               id="search1"
+              aria-labelledby="searchlabel1"
             />
+            <a href="../index.html" class="nav-hidden">Home</a>
             <div class="h-links">
-              <a href="../index.html">Home</a>
               <a href="../videos.html">Videos</a>
+              <a href="../about.html">About</a>
+              <a href="../contact.html">Contact</a>
             </div>
-            <a href="../about.html" class="nav-hidden">About</a>
-            <a href="../contact.html" class="nav-hidden">Contact</a>
             <a href="../cart.html" class="nav-hidden">Cart</a>
           </nav>
           <label for="search2" id="searchlabel2">Search</label>
@@ -71,6 +60,7 @@
             class="search"
             placeholder="     Search"
             id="search2"
+            aria-labelledby="searchlabel2"
           />
           <div>
             <a
@@ -80,13 +70,15 @@
                 class="user-icon"
             /></a>
           </div>
-          <div class="cart-icon">
-            <a href="../cart.html"
-              ><img
+          <div class="cart-icon" id="cartIcon">
+            <a href="../cart.html">
+              <img
                 src="../images/cart_icon.png"
                 alt="Cart Icon"
                 class="cart-icon"
-            /></a>
+              />
+              <span id="cartItemCount">0</span>
+            </a>
           </div>
         </header>
       </div>
@@ -94,7 +86,6 @@
 
     <main>
       <div class="movie-hero" id="movieHero"></div>
-
       <section id="movieProduct"></section>
 
       <section id="film-info"></section>
@@ -114,7 +105,7 @@
         <div class="footer-content">
           <div class="footer-logo">
             <a href="../index.html"
-              ><img src="../images/Logo.png" alt="Squareyes Logo"
+              ><img src="../images/Logo_light.png" alt="SquareEyes Logo"
             /></a>
           </div>
           <nav class="footer-links">
